--- a/assets/sass/layout/_bg.scss
+++ b/assets/sass/layout/_bg.scss
@@ -46,7 +46,7 @@
 				'transform #{_duration(article)} ease-in-out',
 				'filter #{_duration(article)} ease-in-out'
 			));
-			background-image:		url('../../images/bg.jpg');
+			background-image:		url('../../images/IMG_6631.JPG');
 			background-position:	center;
 			background-size:		cover;
 			background-repeat:		no-repeat;
